# radioledger

./: .dockerignore  .gitignore  CONTRIBUTING.md  Makefile  README.md  REPO_STRUCTURE.md  SECURITY.md  THIRD_PARTY_NOTICES.md  package.json  pnpm-lock.yaml  pnpm-workspace.yaml
.github/workflows/: ci.yml
api/: Dockerfile  Makefile  README.md  docker-entrypoint.sh  go.mod  go.sum  sqlc.yaml
api/appserver/: server.go  server_helpers.go
database/: MIGRATION_NOTES.md  bootstrap_legacy_goose.sql
database/migrations/: 001_initial_schema.sql  002_reconcile_legacy_schema.sql  003_grant_goose_readiness.sql  README.md
database/seeds/: 001_reference_data.sql  002_test_users.sql  README.md
database/testdata/: 002_legacy_variant.sql  002_legacy_variant_assert.sql  river_schema_signature.sql
desktop/: .gitignore  README.md  package.json  tsconfig.json  vite.config.ts  vitest.config.ts  wdio.conf.ts
desktop/src/: app-shell.ts  index.html  log-view.ts  main.ts  qso-form.ts  rig-control.ts  rig-profiles.ts  settings-auth.ts  setup-wizard.ts  stats-dashboard.ts  style.css  sync-status.ts  tauri-shim.ts  udp-listener.ts  ui-helpers.ts
desktop/src-tauri/: Cargo.toml  build.rs  tauri.conf.json
desktop/src-tauri/icons/: icon.icns
desktop/src-tauri/src/: auth.rs  config.rs  db.rs  error.rs  lib.rs  lotw.rs  main.rs  n1mm.rs  test_support.rs  tray.rs  udp.rs  wizard.rs
desktop/src-tauri/src/rig/: flrig.rs  managed.rs  mod.rs  profiles.rs  rigctld.rs  tci.rs
desktop/src-tauri/src/sync/: callsign.rs  mod.rs  payload.rs  qso_update.rs
desktop/src-tauri/src/udp/: listener_start.rs  wsjtx_integrations.rs  wsjtx_message_parser.rs  wsjtx_recent_decodes.rs  wsjtx_runtime.rs  wsjtx_wire.rs
desktop/test/: 00-wizard.spec.ts  app-launch.spec.ts  auth-flow.spec.ts  (+7 more)
docker/: .env.example  README.md  docker-compose.dev.yml  docker-compose.worker.yml  docker-compose.yml  init.sh
docs/: ADIF.md  AUTH_IMPLEMENTATION.md  CALLSIGN_DATABASE_SPEC.md  CONFIRMATION_SYSTEM_SPEC.md  DESKTOP_CLIENT.md  DEV_SETUP.md  Dockerfile  MOBILE_APP.md  POSTGIS.md  QSL_AND_AWARDS.md  SCHEMA.md  SYNC_SERVICES.md  TESTING_ARCHITECTURE.md  faq.md  index.md  llms.txt  package.json  security.md
e2e/: package.json  playwright.config.ts  tsconfig.json
lotw-vault/: Dockerfile  README.md  docker-compose.yml  go.mod  go.sum
mobile/: README.md
pkg/: README.md
site/: README.md  astro.config.mjs  package.json
testdata/: README.md
web/: .env.development  .env.production  .gitignore  Dockerfile  README.md  eslint.config.js  package.json  playwright.config.ts  playwright.docs.config.ts  quasar.config.ts  tsconfig.json  vite.config.ts  vitest.config.ts
(+544 files in other folders)
